--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,30 @@
 *{margin: 0; padding: 0; box-sizing: border-box;}
 /* COMMON: */
-body{background: url('https://picsum.photos/2560/1440?random=1');}
+body{}
 #wrap{}
 li{list-style: none; text-align: center; }
 a{text-decoration: none; color: black;}
-img{width: 100%;}
+button{border: 2px solid white; background: transparent; color: white; border-radius: 50px; text-align: center; font-weight: bold; display: inline-block; width: 150px;}
+img{}
 .inner1200{width: 1200px; margin: 0 auto;}
+.txtbox{}
+.txtbox .category{}
+.txtbox .description{}
+.txtbox button.more{}
+.txtbox ul{}
+.txtbox ul li{}
+.txtbox ul li img{}
+.txtbox ul li strong{}
+.txtbox ul li p{}
+
+
+
 /* SKIP: */
 #skip{background-color: black; width: 100%; position: absolute; margin: 0; padding: 0; font-size: 0;}
 #skip ul li a{color: white; padding: 0; font-size: 0; text-align: center; display: block;}
 #skip ul li a:focus{padding: 10px; font-size: 16px;}
 /* HEADER: */
-header{width: 100%; height: 80px; position: fixed; background-color: white;}
+header{width: 100%; height: 80px; position: fixed; background-color: white; z-index: 9;}
 header .inner1200{display: flex; justify-content: space-between;}
 header h1{ height: 80px; line-height: 85px;}
 header h1 a{}
@@ -22,12 +35,13 @@ header #nav #lnb{height: 40px; line-height: 40px;}
 header #nav #lnb ul{display: flex; justify-content: flex-end;}
 header #nav #lnb ul li{width: 100px; height: 40px;}
 header #nav #lnb ul li a{font-size: 12px;}
-
 header #nav #gnb{}
 header #nav #gnb>ul{display: flex; justify-content: space-around; width: 900px; height: 40px; line-height: 30px; }
 header #nav #gnb>ul>li{min-width: 150px; }
-header #nav #gnb>ul>li>a{font-weight: bold; font-size: 17px;}
-header #nav #gnb>ul>li:hover{text-decoration: 3px underline cornflowerblue;}
+header #nav #gnb>ul>li:last-child{min-width: 50px; }
+header #nav #gnb>ul>li i{font-size: 22px;}
+header #nav #gnb>ul>li>a{font-weight: bold; font-size: 17px; display: block; height: 40px; line-height: 40px;}
+header #nav #gnb>ul>li:hover >a{color: cornflowerblue;}
 header #nav #gnb>ul>li.depth1a:hover .depths2{display: block;}
 header #nav #gnb>ul>li.depth1b li{}
 header #nav #gnb>ul>li.depth1b:hover .depths2{display: block;}
@@ -48,16 +62,39 @@ header #nav #gnb .depths2 .depths2b{display: flex; padding: 3% 0;}
 
 
 /* MAIN: */
+section{width: 100%; height: 100vh;}
 /* SECTION1: */
-.main-banners{width: 100%;}
-.main-banners ul{position: relative; top: 0; left: 0; overflow: hidden;}
-.main-banners ul li{position: absolute; top: 80px; left: -100%; }
-.main-banners ul li:first-child{left: 0;}
-.main-banners .downloads{}
-.main-banners .downloads .txtbox p{}
-.main-banners .downloads .txtbox p:last-child{}
-.main-banners .downloads .txtbox p:last-child span{}
+.main-banners{width: 100%; height: 80vh;}
+.main-banners .swiper-slide{position: relative;}
+.main-banners .swiper-slide img{height: 100%;}
+.main-banners .swiper-slide .txtbox{position: absolute; top: 35%; right: 10%;}
+.main-banners .swiper-slide .txtbox p{color: white; font-size: 2.5rem; text-shadow: 2px 2px 10px #666; }
+.main-banners .swiper-slide .txtbox p:nth-child(3){font-size: 18px; margin: 20px 0 40px;}
+.main-banners .swiper-slide .txtbox p strong{}
+.main-banners .swiper-slide .txtbox {}
+.main-banners .swiper-slide .txtbox button{transition: .4s; width: 150px; height: 40px; margin-right: 15px; font-size: 18px;}
+.main-banners .swiper-slide .txtbox button:hover{background-color: white; color: black; }
+.downloads{display: flex; height: 20vh; background: white url('../img/bg_appdown.png') no-repeat center center/cover;}
+.downloads .txtbox{margin: auto 1% auto 4%;}
+.downloads .txtbox p{font-size: 28px; }
+.downloads .txtbox p:first-child{color: #0051A2; font-weight: bold; font-size: 16px;}
+.downloads .txtbox p strong{}
+.downloads .shortcuts{position: absolute;}
+.downloads ul{display: flex;}
+.downloads ul li{margin: auto 4%;}
+.downloads button{border: 1px solid lightgray;}
+/* SECTION2: */
+#parasol{width: 100%; height: 100vh; display: flex; background-image: url('../img/pro_bg.png') no-repeat 100% 100%/cover;}
+#parasol .image{background-image: url('../img/loanpro01.png') no-repeat center center/cover; width: 50%;}
+#parasol .txtbox{}
 
+
+.swiper {width: 100%; height: 100vh;}
+.swiper-button-next,.swiper-button-prev{color: white; font-weight: bold; border-bottom: 2px solid aliceblue; width: 56px; height: 28px;}
+.swiper-button-next::after{content: ''; display: block; width: 2px; height: 13px; transform: rotate(-40deg); position: absolute; bottom: -3px; right: 1px; background-color: aliceblue;}
+.swiper-button-prev::after{content: ''; background-color: aliceblue; width: 2px; height: 13px; transform: rotate(40deg); position: absolute; bottom: -3px; left: 2px; }
+.swiper-pagination-vertical.swiper-pagination-bullets .swiper-pagination-bullet, .swiper-vertical>.swiper-pagination-bullets .swiper-pagination-bullet{margin: 1rem; }
+.swiper-pagination-vertical.swiper-pagination-bullets, .swiper-vertical>.swiper-pagination-bullets{left: 10px; }
 /* MEDIA QUERIES: */
 @media only screen and (max-width: 768px){
   header{display: none;}
