--- a/css/style.css
+++ b/css/style.css
@@ -104,5 +104,6 @@ section{width: 100%; height: 100vh;}
 @media only screen and (max-width: 768px){
   header{display: none;}
   header h1{width:76px;}
+  .image{background-image: none;}
 }
 
