--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 *{margin: 0; padding: 0; box-sizing: border-box;}
 /* COMMON: */
-body{font-family: 'NotoSansKR';}
+body{font-family: 'Noto Sans KR', sans-serif;}
 #wrap{}
 li{list-style: none; text-align: center; }
 a{text-decoration: none; color: black;}
 button{border: 2px solid white; background: transparent; color: white; border-radius: 50px; text-align: center; font-weight: bold; display: inline-block; width: 150px;}
 img{}
-.inner1200{width: 1200px; margin: 0 auto;}
+.inner{width: 90%; margin: 0 auto;}
 .txtbox{}
 .txtbox .category{color: #5A8FFF; font-size: 14px; font-weight: 600;}
 .txtbox .title{font-size: 25px; margin-bottom: 30px}
@@ -16,48 +16,52 @@ img{}
 .txtbox ul li img{max-width: 36px;}
 .txtbox ul li strong{}
 .txtbox ul li p{font-size: 14px;}
-.btn-blue{border-radius: 50px; color: white; width: 150px; height: 40px; background-color: #5A8FFF; font-size: 1rem; }
-
+.btn-blue{border-radius: 50px; color: white; width: 150px; height: 40px; background-color: #5A8FFF; font-size: 1rem; margin-bottom: 10%;}
 
 /* SKIP: */
 #skip{background-color: black; width: 100%; position: absolute; margin: 0; padding: 0; font-size: 0;}
 #skip ul li a{color: white; padding: 0; font-size: 0; text-align: center; display: block;}
 #skip ul li a:focus{padding: 10px; font-size: 16px;}
 /* HEADER: */
-header{width: 100%; height: 80px; position: fixed; background-color: white; z-index: 9;}
-header .inner1200{display: flex; justify-content: space-between;}
+header{width: 100%; height: 80px; position: fixed; z-index: 9;}
+header .inner{display: flex; justify-content: space-between;}
 header h1{ height: 80px; line-height: 85px;}
 header h1 a{}
 header h1 a img{}
-header #nav{display: flex; flex-direction: column; }
-header #nav a{}
-header #nav #lnb{height: 40px; line-height: 40px;}
-header #nav #lnb ul{display: flex; justify-content: flex-end;}
-header #nav #lnb ul li{width: 100px; height: 40px;}
-header #nav #lnb ul li a{font-size: 12px;}
-header #nav #gnb{}
-header #nav #gnb>ul{display: flex; justify-content: space-around; width: 900px; height: 40px; line-height: 30px; }
-header #nav #gnb>ul>li{min-width: 150px; }
-header #nav #gnb>ul>li:last-child{min-width: 50px; }
-header #nav #gnb>ul>li i{font-size: 22px;}
-header #nav #gnb>ul>li>a{font-weight: bold; font-size: 17px; display: block; height: 40px; line-height: 40px;}
-header #nav #gnb>ul>li:hover >a{color: cornflowerblue;}
-header #nav #gnb>ul>li.depth1a:hover .depths2{display: block;}
-header #nav #gnb>ul>li.depth1b li{}
-header #nav #gnb>ul>li.depth1b:hover .depths2{display: block;}
-header #nav #gnb>ul>li.depth1c:hover .depths2{display: block;}
-header #nav #gnb>ul>li.depth1d:hover .depths2{display: block;}
-header #nav #gnb>ul>li.depth1e:hover .depths2{display: block;}
-header #nav #gnb>ul>li.depth1f:hover .depths2{display: block;}
-header #nav #gnb>ul>li.depth1g:hover .depths2{display: block;}
-header #nav #gnb .depths2{border-top: 1px solid cornflowerblue;background-color: white; height: auto; display: none; position: absolute; top: 80px; left: 0; width: 100%;}
-header #nav #gnb .depths2 p.title{font-weight: lighter; flex-basis: 20%;}
-header #nav #gnb .depths2 ul{display: flex; flex-basis: 80%;}
-header #nav #gnb .depths2 ul li{width: calc(80%/6); text-align: left; margin: 0 5px;}
-header #nav #gnb .depths2 ul li:hover a{color: cornflowerblue;}
-header #nav #gnb .depths2 ul li a{color: black; font-weight: bold; font-size: 14px;}
-header #nav #gnb .depths2 .depths2a{display: flex; border-bottom: 1px solid lightgray; padding: 3% 0;}
-header #nav #gnb .depths2 .depths2b{display: flex; padding: 3% 0;}
+header #lnb{height: 80px; line-height: 80px;}
+header #lnb ul{display: flex; justify-content: flex-end;}
+header #lnb ul li{width: 100px; height: 40px;}
+header #lnb ul li:hover{font-weight: bold;}
+header #lnb ul li a{font-size: 16px; color: whitesmoke;}
+header .inner>a{height: 80px;}
+header .inner>a p{font-size: 10px; color: white;}
+header .inner>a span{display: inline-block; background-color: azure; width: 28px; height: 2px; transform: translateY(30px);}
+header .inner>a span::before{content: ''; display: inline-block; width: 22px; height: 2px;  transform: translate(6px,-9px); background-color: azure; display: inline-block;}
+header .inner>a span::after{content: ''; width: 18px; height: 2px;  transform: translate(10px,-25px); background-color: azure; display: inline-block;}
+
+header #gnb{display: none;}
+header #gnb>ul{display: flex; justify-content: space-around; width: 900px; height: 40px; line-height: 30px; }
+header #gnb>ul>li{min-width: 150px; }
+header #gnb>ul>li:last-child{min-width: 50px; }
+header #gnb>ul>li i{font-size: 22px;}
+header #gnb>ul>li>a{font-weight: bold; font-size: 17px; display: block; height: 40px; line-height: 40px;}
+header #gnb>ul>li:hover >a{color: cornflowerblue;}
+header #gnb>ul>li.depth1a:hover .depths2{display: block;}
+header #gnb>ul>li.depth1b li{}
+header #gnb>ul>li.depth1b:hover .depths2{display: block;}
+header #gnb>ul>li.depth1c:hover .depths2{display: block;}
+header #gnb>ul>li.depth1d:hover .depths2{display: block;}
+header #gnb>ul>li.depth1e:hover .depths2{display: block;}
+header #gnb>ul>li.depth1f:hover .depths2{display: block;}
+header #gnb>ul>li.depth1g:hover .depths2{display: block;}
+header #gnb .depths2{border-top: 1px solid cornflowerblue;background-color: white; height: auto; display: none; position: absolute; top: 80px; left: 0; width: 100%;}
+header #gnb .depths2 p.title{font-weight: lighter; flex-basis: 20%;}
+header #gnb .depths2 ul{display: flex; flex-basis: 80%;}
+header #gnb .depths2 ul li{width: calc(80%/6); text-align: left; margin: 0 5px;}
+header #gnb .depths2 ul li:hover a{color: cornflowerblue;}
+header #gnb .depths2 ul li a{color: black; font-weight: bold; font-size: 14px;}
+header #gnb .depths2 .depths2a{display: flex; border-bottom: 1px solid lightgray; padding: 3% 0;}
+header #gnb .depths2 .depths2b{display: flex; padding: 3% 0;}
 
 
 
@@ -65,15 +69,17 @@ header #nav #gnb .depths2 .depths2b{display: flex; padding: 3% 0;}
 section{width: 100%; height: 100vh;}
 /* SECTION1: */
 .main-banners{width: 100%; height: 80vh;}
-.main-banners .swiper-slide{position: relative;}
+.main-banners .swiper-slide{position: relative; display: inherit;}
 .main-banners .swiper-slide img{width: 100%; max-height: 100%;}
-.main-banners .swiper-slide .txtbox{position: absolute; top: 35%; right: 10%;}
-.main-banners .swiper-slide .txtbox p{color: white; font-size: 2.5rem; text-shadow: 2px 2px 10px #666; }
+.main-banners .swiper-slide .txtbox{position: absolute; top: 35%; right: 20%;}
+.main-banners .swiper-slide .txtbox p{color: white; font-size: 2.5rem; text-shadow: 2px 2px 10px #666; padding-left: 10%; height: 4rem;}
+.main-banners .swiper-slide:last-child .txtbox p{padding-left: 0;}
 .main-banners .swiper-slide .txtbox p:nth-child(3){font-size: 18px; margin: 20px 0 40px;}
 .main-banners .swiper-slide .txtbox p strong{}
 .main-banners .swiper-slide .txtbox {}
-.main-banners .swiper-slide .txtbox button{transition: .4s; width: 150px; height: 40px; margin-right: 15px; font-size: 18px;}
+.main-banners .swiper-slide .txtbox button{transition: .4s; width: 150px; height: 40px; margin-right: 15px; font-size: 18px; cursor: pointer;}
 .main-banners .swiper-slide .txtbox button:hover{background-color: white; color: black; }
+.main-banners ul{display: flex;}
 .downloads{display: flex; height: 20vh; background: white url('../img/bg_appdown.png') no-repeat center center/cover;}
 .downloads .txtbox{margin: auto 1% auto 4%;}
 .downloads .txtbox p{font-size: 28px; }
@@ -87,19 +93,23 @@ section{width: 100%; height: 100vh;}
 #parasol{width: 100%; height: 100vh; display: flex; background: url('../img/pro_bg.png') no-repeat center center/cover;}
 #parasol .image{background: url('../img/loanpro01.png') no-repeat center center/50%; width: 50%; height: 100vh;}
 #parasol .txtbox{width: 50%; transform: translatey(30%);}
-#parasol .txtbox ul{display: flex; justify-content: space-between;}
-#parasol .txtbox ul li{border-right: 1px solid lightgrey; width: 125px; height: 20px; display: flex; flex-direction: column;}
+#parasol .txtbox ul{display: flex; justify-content: left;}
+#parasol .txtbox ul li{border-right: 1px solid lightgrey; width: 125px; height: 84px; display: flex; flex-direction: column;}
+#parasol .txtbox ul li img{margin: 0 auto;}
 
 
 
 
 /* SWIPER: */
 .swiper {width: 100%; height: 100vh;}
+.swiper-button-next, .swiper-rtl .swiper-button-prev{right: 5%;}
+.swiper-button-prev, .swiper-rtl .swiper-button-next{left: 5%;}
 .swiper-button-next,.swiper-button-prev{color: white; font-weight: bold; border-bottom: 2px solid aliceblue; width: 56px; height: 28px;}
 .swiper-button-next::after{content: ''; display: block; width: 2px; height: 13px; transform: rotate(-40deg); position: absolute; bottom: -3px; right: 1px; background-color: aliceblue;}
 .swiper-button-prev::after{content: ''; background-color: aliceblue; width: 2px; height: 13px; transform: rotate(40deg); position: absolute; bottom: -3px; left: 2px; }
 .swiper-pagination-vertical.swiper-pagination-bullets .swiper-pagination-bullet, .swiper-vertical>.swiper-pagination-bullets .swiper-pagination-bullet{margin: 1rem; }
 .swiper-pagination-vertical.swiper-pagination-bullets, .swiper-vertical>.swiper-pagination-bullets{left: 10px; }
+.swiper-pagination-progressbar .swiper-pagination-progressbar-fill{background: linear-gradient(45deg,#6391e6,skyblue,white);}
 /* MEDIA QUERIES: */
 @media only screen and (max-width: 768px){
   header{display: none;}
