--- a/css/style.css
+++ b/css/style.css
@@ -42,21 +42,20 @@ header .inner>a span{display: inline-block; background-color: azure; width: 28px
 header .inner>a span::before{content: ''; display: inline-block; width: 22px; height: 2px;  transform: translate(6px,-9px); background-color: azure; display: inline-block;}
 header .inner>a span::after{content: ''; width: 18px; height: 2px;  transform: translate(10px,-25px); background-color: azure; display: inline-block;}
 
-header #gnb{display: none;}
-header #gnb>ul{display: flex; justify-content: space-around; width: 900px; height: 40px; line-height: 30px; }
+header #gnb{display: none; position: absolute; top: 0; left: 0; right: 0; background-color: white; width: 100%; height: 100vh; z-index: 10;}
+header #gnb>ul{display: flex; justify-content: space-around; width: 100%; height: 80px; line-height: 80px; border-bottom: 2px solid cornflowerblue;}
 header #gnb>ul>li{min-width: 150px; }
 header #gnb>ul>li:last-child{min-width: 50px; }
 header #gnb>ul>li i{font-size: 22px;}
-header #gnb>ul>li>a{font-weight: bold; font-size: 17px; display: block; height: 40px; line-height: 40px;}
+header #gnb>ul>li>a{font-weight: bold; font-size: 17px; display: block; height: 80px; line-height: 80px; }
 header #gnb>ul>li:hover >a{color: cornflowerblue;}
+header #gnb>ul>li.depth1a .depths2{display: block;}
 header #gnb>ul>li.depth1a:hover .depths2{display: block;}
-header #gnb>ul>li.depth1b li{}
 header #gnb>ul>li.depth1b:hover .depths2{display: block;}
 header #gnb>ul>li.depth1c:hover .depths2{display: block;}
 header #gnb>ul>li.depth1d:hover .depths2{display: block;}
 header #gnb>ul>li.depth1e:hover .depths2{display: block;}
 header #gnb>ul>li.depth1f:hover .depths2{display: block;}
-header #gnb>ul>li.depth1g:hover .depths2{display: block;}
 header #gnb .depths2{border-top: 1px solid cornflowerblue;background-color: white; height: auto; display: none; position: absolute; top: 80px; left: 0; width: 100%;}
 header #gnb .depths2 p.title{font-weight: lighter; flex-basis: 20%;}
 header #gnb .depths2 ul{display: flex; flex-basis: 80%;}
@@ -66,15 +65,8 @@ header #gnb .depths2 ul li a{color: black; font-weight: bold; font-size: 14px;}
 header #gnb .depths2 .depths2a{display: flex; border-bottom: 1px solid lightgray; padding: 3% 0;}
 header #gnb .depths2 .depths2b{display: flex; padding: 3% 0;}
 
-#nav2 {
-  background: lightyellow;
-	position: fixed;
-    top: -80px;
-    width: 100%; height: 80px;
-    transition: top .4s;
-    
-}
-
+.menuOn{display: block;}
+.menuClosed{display: none;}
 
 /* MAIN: */
 section{width: 100%; height: 100vh;}
@@ -112,10 +104,13 @@ section{width: 100%; height: 100vh;}
 /* SECTION3: */
 #savingsCarousels{margin-top: 80px;}
 #savingsCarousels .swiper-wrapper{height: 70vh;}
-#savingsCarousels .swiper-wrapper .swiper-slide{display: flex;}
+#savingsCarousels .swiper-wrapper .swiper-slide{display: flex; justify-content: center;}
 #savingsCarousels .swiper-wrapper .swiper-slide>div{width: 50%;}
-#savingsCarousels .swiper-wrapper .swiper-slide .contents{}
-#savingsCarousels .swiper-wrapper .swiper-slide .txtbox{padding: 10%}
+#savingsCarousels .swiper-wrapper .swiper-slide .right{padding: 7% 20% 10% 0;}
+#savingsCarousels .swiper-wrapper .swiper-slide .right .category{color: #5A8FFF; font-size: 14px; font-weight: 600;}
+#savingsCarousels .swiper-wrapper .swiper-slide .right .title{font-size: 2rem; margin-bottom: 30px}
+#savingsCarousels .swiper-wrapper .swiper-slide .right .description{margin-bottom: 35px;}
+#savingsCarousels .swiper-wrapper .swiper-slide .txtbox{padding: 7% 0 10% 20%}
 #savingsCarousels .swiper-wrapper .swiper-slide .contents ul{display: flex;}
 #savingsCarousels .swiper-wrapper .swiper-slide .contents ul li{}
 #savingsCarousels .swiper-wrapper .swiper-slide .contents ul li::after{content: ''; width: 1px; height: 60%; background-color: lightgray; display: inline-block;} 
