added href to buttons

--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@ main>section{width: 100%; height: 100vh;}
 .main-banners .swiper-slide .txtbox button{transition: .4s; width: 150px; height: 40px; margin-right: 15px; font-size: 18px; cursor: pointer;}
 .main-banners .swiper-slide .txtbox button:hover{background-color: white; color: black; }
 .main-banners ul{display: flex;}
-.downloads{display: flex; height: 20vh; background: white url('../img/bg_appdown.png') no-repeat center center/cover;}
+.downloads{display: flex; height: 20vh; background: white url('../img/bg_appdown.png') no-repeat center center/cover; padding-left: 15%;}
 .downloads .txtbox{margin: auto 1% auto 4%;}
 .downloads .txtbox p{font-size: 28px; }
 .downloads .txtbox p:first-child{color: #0051A2; font-weight: bold; font-size: 16px;}
@@ -110,11 +110,11 @@ main>section{width: 100%; height: 100vh;}
 #savingsCarousels .swiper-wrapper{height: 70vh;}
 #savingsCarousels .swiper-wrapper .swiper-slide{display: flex; justify-content: center; padding: 5%;}
 #savingsCarousels .swiper-wrapper .swiper-slide>div{width: 50%;}
-#savingsCarousels .swiper-wrapper .swiper-slide .right{padding: 3% 20% 10% 0;}
+#savingsCarousels .swiper-wrapper .swiper-slide .right{padding: 3% 13% 0 3%;}
 #savingsCarousels .swiper-wrapper .swiper-slide .right .category{color: #5A8FFF; font-size: 14px; font-weight: 600;}
 #savingsCarousels .swiper-wrapper .swiper-slide .right .title{font-size: 2rem; margin-bottom: 30px}
 #savingsCarousels .swiper-wrapper .swiper-slide .right .description{margin-bottom: 35px;}
-#savingsCarousels .swiper-wrapper .swiper-slide .txtbox{padding: 3% 0 10% 13%}
+#savingsCarousels .swiper-wrapper .swiper-slide .txtbox{padding: 3% 0 0 13%}
 #savingsCarousels .swiper-wrapper .swiper-slide .contents ul{display: flex; height: 100px;}
 #savingsCarousels .swiper-wrapper .swiper-slide .contents ul li{display: flex; flex-direction: column; width: 30%; height: 100px;}
 #savingsCarousels .swiper-wrapper .swiper-slide .contents ul li::after{content: ''; width: 1px; height: 60px; position: absolute; background-color: lightgray; display: inline-block;} 
@@ -127,12 +127,14 @@ main>section{width: 100%; height: 100vh;}
 #savingsCarousels .swiper-wrapper .deposit .image{background: url('../img/depopro01.png') no-repeat center center/70%;}
 #savingsCarousels .swiper-wrapper .installment .image{background: url('../img/depopro02.png') no-repeat center center/70%;}
 #savingsCarousels .swiper-wrapper .attr1 .image{background: url('../img/depopro03.png') no-repeat center center/70%;}
-
+#savingsCarousels .swiper-button-prev2,.swiper-button-next2{border-bottom: 2px solid #007aff; width: 56px; height: 28px; position: absolute;  cursor: pointer; display: flex; align-items: center; justify-content: center; top: 50%;}
+#savingsCarousels .swiper-button-prev2{left: 8%;}
+#savingsCarousels .swiper-button-next2{right: 8%;}
 /* SECTION4: */
 #campaign{background: url('../img/section03_bg.png') no-repeat center center/cover; height: 100vh; width: 100%;}
 #campaign .inner{display: flex; flex-direction: column;}
 #campaign .inner .titlebox2{color: black; display: flex; flex-direction: column; justify-content: center;}
-#campaign .inner .notice-pannel{background: url('../img/mainesg01.png') no-repeat center center/cover; box-shadow: 5px 5px 15px #444; width: 80%; height: 50vh; margin: 5% auto; border-radius: 25px; overflow: hidden; color: whitesmoke;}
+#campaign .inner .notice-pannel{background: url('../img/mainesg01.png') repeat -200% 100%; box-shadow: 5px 5px 15px #444; width: 80%; height: 50vh; margin: 5% auto; border-radius: 25px; overflow: hidden; color: whitesmoke;}
 
 
 /* 시간초가 지나면 display none되고 밑에 글이 올라오고, 시간 초가 더 지나면 ": */
@@ -210,7 +212,7 @@ article.top .shortcuts ul li p{font-size: .9rem;}
 .swiper-pagination-bullet {
   width: 20px; height: 20px; text-align: center; line-height: 20px; font-size: 12px; color: #000; opacity: 1; background: #73b6fd; }
 .swiper-pagination-bullet-active{color: #fff; background-color:#007aff; width: 5%; border-radius: 14px; font-weight: bold;}
-.swiper-horizontal>.swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal, .swiper-pagination-custom, .swiper-pagination-fraction{text-align: center; position: fixed; bottom: 0;}
+.swiper-horizontal>.swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal, .swiper-pagination-custom, .swiper-pagination-fraction{text-align: center; position: fixed; bottom: 15%;}
 /* MEDIA QUERIES: */
 @media only screen and (max-width: 768px){
   header{display: none;}
