--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ img{}
 .txtbox ul li img{max-width: 36px; margin: 0 auto;}
 .txtbox ul li strong{}
 .txtbox ul li p{font-size: 14px;}
+button:hover{background-color: white; color: black; }
 .titlebox2{height: 20vh; color: whitesmoke; text-align: center; margin-top: 80px;}
 .titlebox2 h3{margin-bottom: 1rem; font-size: 2rem;}
 .btn-blue{border-radius: 50px; color: white; width: 150px; height: 40px; background-color: #5A8FFF; font-size: 1rem; margin-bottom: 10%;}
@@ -83,7 +84,6 @@ main>section{width: 100%; height: 100vh;}
 .main-banners .swiper-slide:last-child .txtbox p{padding-left: 0;}
 .main-banners .swiper-slide .txtbox p:nth-child(3){font-size: 18px; margin: 20px 0 40px;}
 .main-banners .swiper-slide .txtbox button{transition: .4s; width: 150px; height: 40px; margin-right: 15px; font-size: 18px; cursor: pointer;}
-.main-banners .swiper-slide .txtbox button:hover{background-color: white; color: black; }
 .main-banners ul{display: flex;}
 .downloads{display: flex; height: 20vh; background: white url('../img/bg_appdown.png') no-repeat center center/cover; padding-left: 15%;}
 .downloads .txtbox{margin: auto 1% auto 4%;}
@@ -127,9 +127,10 @@ main>section{width: 100%; height: 100vh;}
 #savingsCarousels .swiper-wrapper .deposit .image{background: url('../img/depopro01.png') no-repeat center center/70%;}
 #savingsCarousels .swiper-wrapper .installment .image{background: url('../img/depopro02.png') no-repeat center center/70%;}
 #savingsCarousels .swiper-wrapper .attr1 .image{background: url('../img/depopro03.png') no-repeat center center/70%;}
-#savingsCarousels .swiper-button-prev2,.swiper-button-next2{border-bottom: 2px solid #007aff; width: 56px; height: 28px; position: absolute;  cursor: pointer; display: flex; align-items: center; justify-content: center; top: 50%;}
-#savingsCarousels .swiper-button-prev2{left: 8%;}
-#savingsCarousels .swiper-button-next2{right: 8%;}
+#savingsCarousels .swiper-button-prev,.swiper-button-next{ width: 56px; height: 28px; position: absolute;  cursor: pointer; display: flex; align-items: center; justify-content: center; top: 50%;}
+#savingsCarousels .swiper-button-next, #savingsCarousels .swiper-button-prev i{color: #6391e6; font-size: 3rem;}
+#savingsCarousels .swiper-button-prev{left: 8%;}
+#savingsCarousels .swiper-button-next{right: 8%;}
 /* SECTION4: */
 #campaign{background: url('../img/section03_bg.png') no-repeat center center/cover; height: 100vh; width: 100%;}
 #campaign .inner{display: flex; flex-direction: column;}
@@ -141,12 +142,12 @@ main>section{width: 100%; height: 100vh;}
 #campaign .inner .notice-pannel .notice-wrap{width: 100%; height: 30vh; transform:translate(30%,50%); margin: 0 auto;}
 #campaign .inner .notice-pannel .notice-wrap ul{position: relative; top: 0; left: 0;}
 #campaign .inner .notice-pannel .notice-wrap ul li{position: absolute; top: 0; left: 0; opacity: 0;}
-#campaign .inner .notice-pannel .notice-wrap ul li:first-child{opacity: 1;}
+#campaign .inner .notice-pannel .notice-wrap ul li:first-child{opacity: 1; z-index: 1;}
 #campaign .inner .notice-pannel .notice-wrap ul li p.lead{font-size: 25px;}
 #campaign .inner .notice-pannel .notice-wrap ul li strong{font-size: 28px;}
 #campaign .inner .notice-pannel .notice-wrap ul li p:last-child{font-size: 14px;}
 #campaign .inner .notice-pannel .notice-wrap ul li a{color: white;}
-#campaign .inner .notice-pannel .notice-wrap ul li button{height: 45px; margin-top: 15%;}
+#campaign .inner .notice-pannel .notice-wrap ul li button{height: 45px; margin-top: 15%; font-size: 1rem;}
 #campaign .inner .notice-pannel .notice-wrap ul li button:hover{background-color: white; color: black;}
 
 
@@ -160,8 +161,8 @@ article.top .titlebox2{height: 30vh; color: whitesmoke; text-align: center; tran
 article.top .titlebox2 h3{margin-bottom: 1rem; font-size: 2rem;}
 article.top .shortcuts{height: 40vh;}
 article.top .shortcuts ul{display: flex; justify-content: space-around;}
-article.top .shortcuts ul li{border-radius: 15px; margin: 2%; width: 20%; height: 12rem; padding: 2rem; text-align: left; cursor: pointer;}
-article.top .shortcuts ul li.calc{background: white url('../img/icon_banner401.png') no-repeat 85% 80%/18%;}
+article.top .shortcuts ul li{border-radius: 15px; margin: 2%; width: 20%; height: 12rem; padding: 2rem; text-align: left; cursor: pointer; transition: .8s;}
+article.top .shortcuts ul li.calc{background: white url('../img/icon_banner401.png') no-repeat 85% 80%/18%; }
 article.top .shortcuts ul li.find-distributors{background: white url('../img/icon_banner403.png') no-repeat 85% 80%/18%;}
 article.top .shortcuts ul li.direct-call{background: white url('../img/icon_banner404.png') no-repeat 85% 80%/18%;}
 article.top .shortcuts ul li.online-cs{background: white url('../img/icon_banner402.png') no-repeat 85% 80%/18%;}
@@ -202,9 +203,10 @@ article.top .shortcuts ul li p{font-size: .9rem;}
 .swiper {width: 100%; height: 100vh;}
 .swiper-button-next, .swiper-rtl .swiper-button-prev{right: 5%;}
 .swiper-button-prev, .swiper-rtl .swiper-button-next{left: 5%;}
-.swiper-button-next,.swiper-button-prev{color: white; font-weight: bold; border-bottom: 2px solid aliceblue; width: 56px; height: 28px;}
-.swiper-button-next::after{content: ''; display: block; width: 2px; height: 13px; transform: rotate(-40deg); position: absolute; bottom: -3px; right: 1px; background-color: aliceblue;}
-.swiper-button-prev::after{content: ''; background-color: aliceblue; width: 2px; height: 13px; transform: rotate(40deg); position: absolute; bottom: -3px; left: 2px; }
+#mainCarousels .swiper-button-next,#mainCarousels .swiper-button-prev{color: white; font-weight: bold; border-bottom: 2px solid aliceblue; width: 56px; height: 28px;}
+.swiper-button-next::after,.swiper-button-prev::after{content: '';}
+#mainCarousels .swiper-button-next::after{content: ''; display: block; width: 2px; height: 13px; transform: rotate(-40deg); position: absolute; bottom: -3px; right: 1px; background-color: aliceblue;}
+#mainCarousels .swiper-button-prev::after{content: ''; background-color: aliceblue; width: 2px; height: 13px; transform: rotate(40deg); position: absolute; bottom: -3px; left: 2px; }
 .swiper-pagination-vertical.swiper-pagination-bullets .swiper-pagination-bullet, .swiper-vertical>.swiper-pagination-bullets .swiper-pagination-bullet{margin: 1rem; }
 .swiper-pagination-vertical.swiper-pagination-bullets, .swiper-vertical>.swiper-pagination-bullets{left: 10px; }
 .swiper-pagination-progressbar .swiper-pagination-progressbar-fill{background: linear-gradient(45deg,#6391e6,skyblue,white);}
